# ImageTextureFinder

./: .gitignore  BenLBP.py  Embedding.py  LBP.py  README.md  Viz.py  common.py  entrypoint.py  pip_reqs.txt  pip_reqs_aln.txt  pyproject.toml  utils.py  viz_playground.ipynb
src/: example.ipynb  example.py  sample_run.sh
src/container/: Dockerfile  environment.yml  reqs.txt
src/environments/: environment_lbp3d_aln.yml
src/fastlbp-baseline-imbg/: Viz.py  entrypoint.py
src/fastlbp_baseline_imbg/: Embedding.py  LBP.py  Viz.py  __init__.py  common.py  entrypoint.py
src/fastlbp_imbg/: Embedding.py  LBP.py  Viz.py  __init__.py  __main__.py  entrypoint.py  useful_functions.py
src/nextflow/: main.nf  nextflow.config
src/nextflow/conf/: local.config  lsf.config
